--- a/SortArraySolutionTask2/SortArrayLogik.csproj
+++ b/SortArraySolutionTask2/SortArrayLogik.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SortJuggedArray.cs" />
+    <Compile Include="SortArrayWithDelegete.cs" />
+    <Compile Include="SortArrayWithInterface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
